--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-js-progressbar": "^1.1.1",
     "react-scripts": "5.0.1",
     "sass": "^1.80.6",
     "three": "^0.170.0",
