--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lightgame",
+  "name": "Night-Watcher",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,11 +18,13 @@
     "three-stdlib": "^2.34.0",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://kayzer184.github.io/Night-Watcher",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -43,6 +45,7 @@
     ]
   },
   "devDependencies": {
-    "@types/three": "^0.169.0"
+    "@types/three": "^0.169.0",
+    "gh-pages": "^6.2.0"
   }
 }
