--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "three-stdlib": "^2.34.0",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://kayzer184.github.io/Night-Watcher",
+  "homepage": "https://kayzer184.github.io/Night-Watcher/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
