--- a/package.json
+++ b/package.json
@@ -18,13 +18,11 @@
     "three-stdlib": "^2.34.0",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://kayzer184.github.io/Night-Watcher/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -45,7 +43,6 @@
     ]
   },
   "devDependencies": {
-    "@types/three": "^0.169.0",
-    "gh-pages": "^6.2.0"
+    "@types/three": "^0.169.0"
   }
 }
