--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "three-stdlib": "^2.34.0",
     "web-vitals": "^2.1.4"
   },
+  "proxy": "http://localhost:5000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
