--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ramonak/react-progress-bar": "^5.3.0",
+    "@react-oauth/google": "^0.12.1",
     "@react-three/drei": "^9.115.0",
     "@react-three/fiber": "^8.17.10",
     "@testing-library/jest-dom": "^5.17.0",
@@ -17,6 +18,7 @@
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "sass": "^1.80.6",
+    "styled-components": "^6.1.13",
     "three": "^0.170.0",
     "three-stdlib": "^2.34.0",
     "web-vitals": "^2.1.4"
