--- a/client/package.json
+++ b/client/package.json
@@ -18,12 +18,12 @@
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "sass": "^1.80.6",
+    "stats.js": "^0.17.0",
     "styled-components": "^6.1.13",
     "three": "^0.170.0",
     "three-stdlib": "^2.34.0",
     "web-vitals": "^2.1.4"
   },
-  "proxy": "http://localhost:5000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
